# MD-Document-App

./: .env  Dockerfile  constants.env  docker-compose.yaml  nginx.conf  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: b7179de517c5_create_tables.py
src/application/app/: app.py
src/application/core/config/: config.py
src/application/core/constants/: constants.py
src/application/core/database/: database.py
src/application/core/mixins/: mixins.py
src/application/core/protocols/: s3.py  service.py  verifyer.py
src/application/core/repository/: document.py  user.py
src/application/infrastructure/repository/: document.py  user.py
src/application/infrastructure/s3/: minio.py
src/application/infrastructure/verifyer/auth/: token_verifyer.py
src/application/infrastructure/verifyer/document/: authors_verifyer.py  verify_document.py
src/application/infrastructure/verifyer/user/: exist_user.py  get_user_verifyer.py  password_verifyer.py  verifying_of_existing_user.py
src/application/services/auth/: exceptions.py  router.py  scheme.py
src/application/services/auth/command/: login.py
src/application/services/document/: exception.py  models.py  router.py  scheme.py
src/application/services/document/commands/: create_document.py  delete_document.py  update_status.py
src/application/services/document/queries/: get_document.py  get_documents.py  get_documents_for_participiant.py  get_documents_for_user.py  get_file.py
src/application/services/user/: exception.py  models.py  router.py  scheme.py
src/application/utils/: utils.py
(+8 files in other folders)
